testsuite/tests/parser/should_fail/strictnessDataCon_B.stderr

strictnessDataCon_B.hs:1:42: error: [GHC-58481]
    Parse error on input ‘}’.
    Expected one of '_', 'as', 'hiding', 'qualified', 'export',
                    'label', 'dynamic', 'safe', 'interruptible', 'unsafe', ...
